--- a/pytest.ini
+++ b/pytest.ini
@@ -29,6 +29,7 @@ markers =
     unit: fast, isolated tests of functions/classes (no external network/Redis/OpenAI)
     integration: API-level tests using FastAPI app with dependency overrides (no real external services)
     smoke: minimal happy-path flow using fakes
+    no_tool_stubs: disable tool stubbing so tests can exercise real agent tools
 
 # Keep noisy deprecations out of CI logs (tune as needed)
 filterwarnings =
